# quip2

./: README.md  TODO.md  diagram.md
phash-wasm/: Cargo.toml
phash-wasm/src/: lib.rs
quip-extension/: cache.js  content.js  imageHandler.js  manifest.json  observer.js  popup.html  popup.js  style.css  utils.js  wasm-loader.js
quip-extension/wasm/: package.json  phash_wasm.d.ts  phash_wasm.js  phash_wasm_bg.wasm  phash_wasm_bg.wasm.d.ts
quip-server/: docker-compose.yml  dockerfile  requirements.txt  server.py
sqlite-hamming/: Cargo.toml
sqlite-hamming/src/: lib.rs
