[package]
name = "phash_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
image = "0.24"
image_hasher = "1.2"
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
opt-level = "s"  # or "z" for smallest binary size